--- a/my_map3.html
+++ b/my_map3.html
@@ -3,10 +3,18 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>Google Maps - pygmaps </title>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false&key=AIzaSyCLV6iOyD6d60RXPgpzMf4baAy8ZqjCdYE"></script>
-<script type="text/javascript">
-	function initialize() {
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false&key=AIzaSyCLV6iOyD6d60RXPgpzMf4baAy8ZqjCdYE"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+	function initialize(flag,nextPos) {
+
 		var centerlatlng = new google.maps.LatLng(40.110588, -88.207270);
+		if (flag){
+			centerlatlng =  new google.maps.LatLng(nextPos[0], nextPos[1]);
+		}
 		var myOptions = {
 			zoom: 13,
 			center: centerlatlng,
@@ -781,8 +789,61 @@ Path.setMap(map);
 
 	}
 </script>
+
+
+	<script type="text/javascript">
+
+	</script>
+
+	<style>
+		#map{
+			display: flex;
+			justify-content: center;
+		}
+
+		#button-wrapper{
+			background: lightgrey;
+			display: flex;
+			flex-direction: column;
+
+		}
+		.btn-primary{
+			margin-bottom: 15px;
+		}
+
+	</style>
 </head>
-<body style="margin:0px; padding:0px;" onload="initialize()">
-	<div id="map_canvas" style="width: 100%; height: 100%;"></div>
+<body style="margin:0px; padding:0px;" onload="initialize(false)">
+	<div id="map">
+		<div id="map_canvas" style="width: 100%; height: 100%;"></div>
+		<div id="button-wrapper">
+			<button type="button" class="btn btn-primary" id="next">Move Next</button>
+			<button type="button" class="btn btn-primary" id="up">Move Up</button>
+			<button type="button" class="btn btn-primary">Hello</button>
+		</div>
+	</div>
+
 </body>
+<script>
+	let locations = [];
+	locations.push([40.110588, -88.207270],[25.761680, -80.191790],[28.385233, -81.563874],[18.7746292, 98.9765261]);
+	let next = document.getElementById("next");
+	let up = document.getElementById("up");
+	var index = 0;
+	next.addEventListener("click",function () {
+		index ++;
+		if (index >= locations.length)
+			index = 0;
+		locationNext = locations[index];
+		initialize(true,locationNext);
+	});
+
+	up.addEventListener("click",function () {
+		index --;
+		if (index <0)
+			index = locations.length-1;
+		locationPrev = locations[index];
+		initialize(true,locationPrev);
+	})
+</script>
 </html>
