Changed orlando center

--- a/map5.html
+++ b/map5.html
@@ -3653,7 +3653,7 @@ heatmap.set('dissipating', true);
 </body>
 <script>
 	let locations = [];
-	locations.push([40.110588, -88.207270],[25.761680, -80.191790],[28.385233, -81.563874],[18.7746292, 98.9765261]);
+	locations.push([40.110588, -88.207270],[25.761680, -80.191790],[28.4114555,-81.4638934],[18.7746292, 98.9765261]);
 	let next = document.getElementById("next");
 	let up = document.getElementById("up");
 	var index = 0;
