Typo and style change

--- a/map5.html
+++ b/map5.html
@@ -28,9 +28,15 @@
 			margin-bottom: 15px;
 			background: none;
 			border: none;
+			box-shadow: none !important;
+			border-radius: 0px !important;
 		}
 		.btn-primary:hover {
 			background: #6bf;
+			border: none;
+		}
+		.btn-primary:active {
+			background: rgb(29, 139, 230) !important;
 			border: none;
 		}
 	</style>
