radius too large

--- a/map5.html
+++ b/map5.html
@@ -16,11 +16,10 @@
 			justify-content: center;
 			width: 100%;
 		}
-
 		#button-wrapper{
 			background: rgba(45, 45, 45, 0.98);
 			display: flex;
-			width: 15%;
+			width: 300px;
 			flex-direction: column;
 			justify-content: center;
 		}
