--- a/map5.html
+++ b/map5.html
@@ -1,59 +1,56 @@
 <html>
-<head>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-<title>Google Maps - pygmaps </title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false&key=AIzaSyCLV6iOyD6d60RXPgpzMf4baAy8ZqjCdYE"></script>
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-	<style>
-		#map{
+   <head>
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+      <title>Uber Visualization</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=visualization&sensor=true_or_false&key=AIzaSyCLV6iOyD6d60RXPgpzMf4baAy8ZqjCdYE"></script>
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <style>
+         #map{
 			display: flex;
 			justify-content: center;
 			width: 100%;
-		}
-		#button-wrapper{
+         }
+         #button-wrapper{
 			background: rgba(45, 45, 45, 0.98);
 			display: flex;
 			width: 300px;
 			flex-direction: column;
 			justify-content: center;
-		}
-		.btn-primary {
+         }
+         .btn-primary {
 			margin-bottom: 15px;
 			background: none;
 			border: none;
 			box-shadow: none !important;
 			border-radius: 0px !important;
-		}
-		.btn-primary:hover {
+         }
+         .btn-primary:hover {
 			background: #6bf;
 			border: none;
-		}
-		.btn-primary:active {
+         }
+         .btn-primary:active {
 			background: rgb(29, 139, 230) !important;
 			border: none;
-		}
-	</style>
-</head>
-<body style="margin:0px; padding:0px;" onload="initialize(false)">
-	<div id="map">
-		<div id="map_canvas" style="width: 100%; height: 100%;"></div>
-		<div id="button-wrapper">
-			<button type="button" class="btn btn-primary" id="next">Move Next</button>
-			<button type="button" class="btn btn-primary" id="up">Move Up</button>
-			<button type="button" class="btn btn-primary" id = "stroke">Hide Personal Route</button>
-			<button type="button" class="btn btn-primary" id = "marker">Hide Friend Marker</button>
-			<button type="button" class="btn btn-primary" id = "heat">Hide Heat Map</button>
-			<button type="button" class="btn btn-primary" id = "bar">Data Analysis</button>
-		</button>
-		</div>
-	</div>
-
-	<script type="text/javascript" src="script.js"></script>
-	</body>
+         }
+      </style>
+   </head>
+   <body style="margin:0px; padding:0px;" onload="initialize(false)">
+      <div id="map">
+         <div id="map_canvas" style="width: 100%; height: 100%;"></div>
+         <div id="button-wrapper">
+            <button type="button" class="btn btn-primary" id="next">Move Next</button>
+            <button type="button" class="btn btn-primary" id="up">Move Up</button>
+            <button type="button" class="btn btn-primary" id = "stroke">Hide Personal Route</button>
+            <button type="button" class="btn btn-primary" id = "marker">Hide Friend Marker</button>
+            <button type="button" class="btn btn-primary" id = "heat">Hide Heat Map</button>
+            <button type="button" class="btn btn-primary" id = "bar">Data Analysis</button>
+            </button>
+         </div>
+      </div>
+      <script type="text/javascript" src="script.js"></script>
+   </body>
 </html>
