--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			display: flex;
 			width: 300px;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: space-around;
          }
          .btn-primary {
 			margin-bottom: 15px;
@@ -36,18 +36,61 @@
 			background: rgb(29, 139, 230) !important;
 			border: none;
          }
+         #legend-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            color: white;
+            width: 100%;
+            bottom: 10%;
+         }
+      
+         .legend {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            width: 80%;
+            padding: 10px;
+         }
+         .legend img {
+            width: 18%;
+         }
+         .legend p {
+            width: 70%;
+            text-align: center;
+            margin: 0;
+            font-size: 15px;
+            font-weight: 700;
+         }
+         #content-wrapper {
+            display: flex;
+            flex-direction: column;
+         }
       </style>
    </head>
    <body style="margin:0px; padding:0px;" onload="initialize(false)">
       <div id="map">
          <div id="map_canvas" style="width: 100%; height: 100%;"></div>
          <div id="button-wrapper">
-            <button type="button" class="btn btn-primary" id="next">Move Next</button>
-            <button type="button" class="btn btn-primary" id="up">Move Up</button>
-            <button type="button" class="btn btn-primary" id = "stroke">Hide Personal Route</button>
-            <button type="button" class="btn btn-primary" id = "marker">Hide Friend Marker</button>
-            <button type="button" class="btn btn-primary" id = "heat">Hide Heat Map</button>
-            <button type="button" class="btn btn-primary" id = "bar">Data Analysis</button>
+            <div id="content-wrapper">
+                  <button type="button" class="btn btn-primary" id="next">Move Next</button>
+                  <button type="button" class="btn btn-primary" id="up">Move Up</button>
+                  <button type="button" class="btn btn-primary" id = "stroke">Hide Personal Route</button>
+                  <button type="button" class="btn btn-primary" id = "marker">Hide Friend Marker</button>
+                  <button type="button" class="btn btn-primary" id = "heat">Hide Heat Map</button>
+                  <button type="button" class="btn btn-primary" id = "bar">Data Analysis</button>
+            </div>
+            
+            <div id="legend-wrapper">
+               <div class="legend">
+                  <img src="figs/marker_blue.png" alt=""> <p>Pick Up</p>  
+               </div>
+               <div class="legend">
+                  <img src="figs/marker_red.png" alt=""> <p>Drop Off</p>  
+               </div>
+            </div>
             </button>
          </div>
       </div>
