--- a/Data Analysis.html
+++ b/Data Analysis.html
@@ -19,6 +19,7 @@
               font-family: "Avenir", Helvetica, sans-serif;
               height: 100%;
               width: 100%;
+              user-select: none;
           }
 
           .window2 {
